<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

    <string name="app_name">Redocs Archive</string>
    <!-- Menu strings -->
    <string name="settings_panel">Settings</string>
    <string name="home_panel">Home</string>
    <string name="search_panel">Search</string>
    <string name="types_panel">Types Panel</string>

    <string name="structure_tab_title">Structure</string>
    <string name="documents_tab_title">Documents</string>
    <string name="documents_tab_document">Document</string>
    <string name="links_tab_title">Links</string>

    <string name="action_add">Add child</string>
    <string name="action_add_next">Add Next</string>
    <string name="action_delete">Delete</string>
    <string name="action_view">View</string>

    <string name="file_id_title">ID</string>
    <string name="file_name_title">Name</string>
    <string name="file_size_title">Size</string>

    <string name="dialog_yes_button_title">Yes</string>
    <string name="dialog_no_button_title">No</string>
    <string name="dialog_cancel_button_title">Cancel</string>
    <string name="dialog_save_button_title">Save</string>

    <string name="exit_app_by_back_button">Press back one time more to exit</string>

    <!--  Settings  -->
    <string name="settings_select_language_title">Language</string>
    <string-array name="settings_network_item_keys">
        <item>wi_fi</item>
        <item>any</item>
    </string-array>

    <string-array name="settings_network_item_titles">
        <item>WI-FI</item>
        <item>Any</item>
    </string-array>
    <!--<string-array name="settings_languages_list">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="settings_languages_list_values">
        <item>en</item>
        <item>ru</item>
    </string-array>-->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_service_url_title" translatable="false">Service url</string>
    <string name="settings_network_title">Network</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_title">Login</string>
</resources>
