<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="language"
        app:title="@string/settings_select_language_title"
        app:fragment="com.redocs.archive.ui.SettingsFragment$SelectLanguageFragment" />

    <Preference
            app:key="Screen2"
            app:title="Prefs on Screen 2"
            app:fragment="com.redocs.archive.ui.SettingsFragment$Screen2Fragment"/>

    <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

    <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

</PreferenceScreen>