<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_nav_dest">
    <fragment
            android:id="@+id/home_nav_dest"
            android:name="com.redocs.archive.ui.HomeFragment"
            android:label="@string/home_panel"
            tools:layout="@layout/home_fragment"/>

    <fragment
        android:id="@+id/search_nav_dest"
        android:name="com.redocs.archive.ui.SearchFragment"
        android:label="@string/search_panel"
        tools:layout="@layout/search_fragment"/>


    <fragment
            android:id="@+id/types_nav_dest"
            android:name="com.redocs.archive.ui.TypesFragment"
            android:label="@string/types_panel"
            tools:layout="@layout/types_fragment"/>

    <fragment
            android:id="@+id/settings_dest"
            android:name="com.redocs.archive.ui.SettingsFragment"
            android:label="@string/settings_panel">
    </fragment>

</navigation>
